# llama_sdk

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
build-android/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-android/llama_cpp_build/: Makefile  cmake_install.cmake  llama-config.cmake  llama-version.cmake  llama.pc
build-android/llama_cpp_build/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
build-android/llama_cpp_build/ggml/src/: Makefile  cmake_install.cmake
build-android/llama_cpp_build/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
build-android/llama_cpp_build/src/: Makefile  cmake_install.cmake
example/: build.yaml  pubspec.yaml
example/android/app/: build.gradle
example/ios/: ExportOptions.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
ios/: llama.podspec  llama_sdk.podspec
lib/: lcpp.dart  lcpp.web.dart
lib/builder/: install_wasm.dart
lib/src/: bindings.dart  chat_message.dart  hook.dart  llama.dart  llama_exception.dart  llama_isolated.dart  llama_native.dart  llama_params.dart  llama_worker.dart  voices.dart  wav.dart  worker_params.dart
lib/src/llama/: llama.dart  llama_base.dart  llama_chat.dart  llama_isolated.dart  llama_native.dart  llama_tts.dart  llama_worker.dart
lib/src/mixins/: llama_prompt_mixin.dart  llama_tts_mixin.dart
lib/src/native/: llama.dart  uint8list_extension.dart
lib/src/outetts/: voice.dart
lib/src/params/: context_params.dart  isolate_params.dart  llama_chat_params.dart  llama_params.dart  llama_tts_params.dart  model_params.dart  sampling_params.dart  worker_params.dart
lib/src/utility/: num_2_words.dart  wav.dart
lib/src/web/: bindings.dart  fs.dart  get_wasm_path.dart  llama.dart  uint8list_extension.dart
linux/: CMakeLists.txt
macos/: lcpp.podspec  llama.podspec  llama_sdk.podspec
scripts/: create-dmg.sh
src/: api.cpp  api.h  llm.cpp  params.cpp  params.hpp  tts.cpp  tts.hpp
web/: CMakeLists.txt  Makefile  llama.html  llama.js  llama.wasm  wasm-entry.c
windows/: CMakeLists.txt
